fixed image cropping

--- a/M4E-FrontEndDev-CootaucoJoseMalhabour/main copy.css
+++ b/M4E-FrontEndDev-CootaucoJoseMalhabour/main copy.css
@@ -55,18 +55,25 @@ form input, label {
 }
 
 .carousel-item img { 
-    display: block; 
-    width: 100%; 
+    display: inline; 
+    width: 100%;
     height: 400px; 
-    object-fit: cover; 
+    object-fit: contain; 
 }
 
 /* carousel button stuff*/ 
-.carousel-control-prev, .carousel-control-next {
+.carousel-control-prev{
     width: 5%;
     background-color: rgba(0, 0, 0, 0.3); 
-    border-radius: 0%; 
+    left: 20%;
 }
+
+.carousel-control-next{
+    width: 5%; 
+    background-color: rgba(0, 0, 0, 0.3); 
+    right: 20%; 
+}
+
 
 .carousel-control-prev-icon, .carousel-control-next-icon { 
     background-size: 100% 100%; 
